--- a/config/locales/validates_timeliness.en.yml
+++ b/config/locales/validates_timeliness.en.yml
@@ -3,7 +3,7 @@ en:
     messages:
       invalid_date: "is not a valid date"
       invalid_time: "is not a valid time"
-      invalid_datetime: "is not a valid datetime"
+      invalid_datetime: "is not a valid date and time"
       is_at: "must be at %{restriction}"
       before: "must be before %{restriction}"
       on_or_before: "must be on or before %{restriction}"
@@ -11,6 +11,6 @@ en:
       on_or_after: "must be on or after %{restriction}"
   validates_timeliness:
     error_value_formats:
-      date: '%Y-%m-%d'
+      date: '%-m/%-d/%Y'
       time: '%H:%M:%S'
-      datetime: '%Y-%m-%d %H:%M:%S'
+      datetime: '%-m/%-d/%Y %H:%M:%S'
