WIP: Add activerecord locale files, update Submission error messages, misc frontend and method clean up

--- a/config/locales/activerecord/grant_permission.yml
+++ b/config/locales/activerecord/grant_permission.yml
@@ -1,11 +1,8 @@
 en:
   activerecord:
     attributes:
-      grant:
-        slug: Short name
+      grant_permission:
     errors:
-      messages:
-        blank: is required.
       models:
         grant_permission:
           attributes:
@@ -13,3 +10,4 @@ en:
               blank: must be selected.
             role:
               blank: must be selected.
+
