--- a/config/locales/pundit.en.yml
+++ b/config/locales/pundit.en.yml
@@ -1,6 +1,6 @@
 en:
  pundit:
-   default: 'You cannot perform this action.'
+   default: 'You are not authorized to perform this action.'
    grant_policy:
      update?: 'You cannot edit this grant!'
      create?: 'You cannot create grants!'
