WIP: ActiveStorage validations

--- a/config/locales/activerecord/grant_submission_response.yml
+++ b/config/locales/activerecord/grant_submission_response.yml
@@ -15,8 +15,10 @@ en:
             decimal_val:
               not_a_number: to '%{question}' must be a number.
             document:
-              blank: upload for '%{question} is required.'
-              file_too_large: uploaded for '%{question}'' is too large (%{uploaded_file_size}MB).'
+              blank: upload for '%{question} is required.
+              content_type_invalid: uploaded for '%{question} must be a PDF, Word or Excel file.
+              file_too_large: uploaded for '%{question}' is too large (%{uploaded_file_size}MB).
+              excluded_mime_type: uploaded for '%{question}' must be a %{allowed_types} file.
             grant_submission_multiple_choice_option_id:
               blank: for '%{question}' is required.
             datetime_val_date_optional_time_magik:
