WIP: Fix display_order errors, add multiple_choice_option error when none added

--- a/config/locales/activerecord/grant.en.yml
+++ b/config/locales/activerecord/grant.en.yml
@@ -1,8 +1,11 @@
 en:
   activerecord:
     attributes:
-      grant:
-        slug: Short Name
+      grant: &grant
+        friendly_id: Short Name
     errors:
       models:
         grant:
+          <<: *grant
+
+
