--- a/config/locales/activerecord/grant_submission_question.yml
+++ b/config/locales/activerecord/grant_submission_question.yml
@@ -20,6 +20,7 @@ en:
             response_type:
               blank: must be selected.
               inclusion: must be selected.
+              requires_option: '"Multiple Choice -- Pick One" requires at least one option.'
   helpers:
     label:
       grant_submission/question:
