--- a/config/locales/activerecord/grant.en.yml
+++ b/config/locales/activerecord/grant.en.yml
@@ -2,10 +2,9 @@ en:
   activerecord:
     attributes:
       grant: &grant
+        slug: Short Name
         friendly_id: Short Name
     errors:
       models:
         grant:
           <<: *grant
-
-
