--- a/config/locales/activerecord/user.en.yml
+++ b/config/locales/activerecord/user.en.yml
@@ -5,6 +5,7 @@ en:
         first_name: First Name
         last_name: Last Name
         email: Email
+        upn: Unique ID
         era_commons: 'eRA Commons'
     errors:
       models:
