--- a/config/locales/activerecord/user.en.yml
+++ b/config/locales/activerecord/user.en.yml
@@ -7,6 +7,7 @@ en:
         email: Email
         upn: Unique ID
         era_commons: 'eRA Commons'
+        user_type: User Type
     errors:
       models:
         user:
