Add pagination to index pages #132

--- a/config/locales/activerecord/grant_submission_submission.yml
+++ b/config/locales/activerecord/grant_submission_submission.yml
@@ -7,6 +7,10 @@ en:
       models:
         grant_submission/submission:
           attributes:
+    models:
+      submission:
+        one: submission
+        other: submissions
   helpers:
     label:
       grant_submission/submission:
