WIP: Add ransack gem, sortable index tables

--- a/config/locales/activerecord/grant.en.yml
+++ b/config/locales/activerecord/grant.en.yml
@@ -4,6 +4,9 @@ en:
       grant: &grant
         slug: Short Name
         friendly_id: Short Name
+        publish_date: Publish Date
+        submission_open_date: Submission Open Date
+        submission_close_date: Submission Close Date
     errors:
       models:
         grant:
