--- a/config/locales/activerecord/grant_submission_question.yml
+++ b/config/locales/activerecord/grant_submission_question.yml
@@ -14,6 +14,8 @@ en:
       models:
         grant_submission/question:
           attributes:
+            text:
+              taken: must be unique in its section.
             is_mandatory:
               blank: must be selected.
               inclusion: must be selected.
