--- a/config/locales/activerecord/grant_submission_response.yml
+++ b/config/locales/activerecord/grant_submission_response.yml
@@ -20,6 +20,7 @@ en:
               content_type_invalid: uploaded for '%{question} must be a PDF, Word or Excel file.
               file_too_large: uploaded for '%{question}' is larger than %{allowed_file_size} (%{uploaded_file_size}MB).
               excluded_mime_type: uploaded for '%{question}' must be a %{allowed_types} file.
+              not_a_file_upload: to '%{question}' cannot include a file upload.
             grant_submission_multiple_choice_option_id:
               blank: for '%{question}' is required.
             datetime_val_date_optional_time_magik:
