--- a/config/locales/activerecord/review.yml
+++ b/config/locales/activerecord/review.yml
@@ -1,8 +1,11 @@
 en:
   activerecord:
     attributes:
-      review:
+      review: &review
         reviewer: Reviewer
+        overall_impact: Overall Impact
+        overall_impact_score: Overall Impact Score
+        overall_impact_comment: Overall Impact Comment
     errors:
       models:
         review:
@@ -19,3 +22,7 @@ en:
       review:
         one: review
         other: reviews
+  helpers:
+    label:
+      review:
+        <<: *review
