Add likert guidance, misc minor frontend fixes #310

--- a/config/locales/activerecord/criterion.yml
+++ b/config/locales/activerecord/criterion.yml
@@ -5,6 +5,7 @@ en:
         name: Criterion Name
         description: Instructions / Help Text
         is_mandatory: Required
+        show_comment_field: Show Comment Field
     errors:
       models:
         criterion:
