added "Your" to error for responses. #367

--- a/config/locales/activerecord/grant_submission_submission.yml
+++ b/config/locales/activerecord/grant_submission_submission.yml
@@ -3,6 +3,7 @@ en:
     attributes:
       grant_submission/submission: &submission
         title: Your Project's Title
+        responses: Your responses
     errors:
       models:
         grant_submission/submission:
