dded more feedback to error for responses in grant_submission_submission.yml. #367

--- a/config/locales/activerecord/grant_submission_submission.yml
+++ b/config/locales/activerecord/grant_submission_submission.yml
@@ -8,6 +8,8 @@ en:
       models:
         grant_submission/submission:
           attributes:
+            responses:
+              invalid: have highlighted errors.
     models:
       submission:
         one: submission
