Move unsubmit error message to locale file #371

--- a/config/locales/activerecord/grant_submission_submission.yml
+++ b/config/locales/activerecord/grant_submission_submission.yml
@@ -8,6 +8,8 @@ en:
       models:
         grant_submission/submission:
           attributes:
+            base:
+              reviewed_submission_cannot_be_unsubmitted: This submission has already been scored and may not be edited.
             responses:
               invalid: have highlighted errors.
     models:
