Change success message based on visibility #469

--- a/config/locales/activerecord/banner.en.yml
+++ b/config/locales/activerecord/banner.en.yml
@@ -1,4 +1,15 @@
 en:
+  banners:
+    create:
+      visible_success: |
+        The banner has been saved and will be visible until it is deleted or toggled off.
+      not_visible_success: |
+        The banner has been saved but is not shown. Check "Visible" to show to users.
+    update:
+      visible_success:
+        The banner has been updated and is visible until it is deleted or toggled off.
+      not_visible_success: |
+        The banner has been updated but is not shown. Check "Visible" to show to users.
   activerecord:
     attributes:
       banner: &banner
