registered users first try. #554

--- a/config/locales/activerecord/user.en.yml
+++ b/config/locales/activerecord/user.en.yml
@@ -5,7 +5,7 @@ en:
         first_name: First Name
         last_name: Last Name
         email: Email
-        upn: Unique ID
+        uid: Unique ID
         era_commons: 'eRA Commons'
         user_type: User Type
     errors:
