--- a/config/locales/activerecord/user.en.yml
+++ b/config/locales/activerecord/user.en.yml
@@ -6,8 +6,13 @@ en:
         last_name: Last Name
         email: Email
         uid: Unique ID
-        era_commons: 'eRA Commons'
-        user_type: User Type
+        era_commons: eRA Commons
+        type: User Type
+        created_at: Date Joined
+        current_sign_in_at: Last Access
+      registered_user:
+        <<: *user
+        uid: Email
     errors:
       models:
         user:
