--- a/config/locales/activerecord/grant.en.yml
+++ b/config/locales/activerecord/grant.en.yml
@@ -7,6 +7,7 @@ en:
         publish_date: Publish Date
         submission_open_date: Submission Open Date
         submission_close_date: Submission Close Date
+        review_close_date: Review Close Date
     errors:
       models:
         grant:
