--- a/config/locales/activerecord/panel.yml
+++ b/config/locales/activerecord/panel.yml
@@ -12,6 +12,11 @@ en:
           attributes:
             start_datetime:
               before_submission_deadline: 'must be after the submission close date.'
+    models:
+      panel:
+        one: panel
+        other: panels
+
   helpers:
     label:
       panel:
