Standardize index search and action links #547 and #676

--- a/config/locales/activerecord/grant_permission.yml
+++ b/config/locales/activerecord/grant_permission.yml
@@ -2,6 +2,10 @@ en:
   activerecord:
     attributes:
       grant_permission:
+    models:
+      grant_permission:
+        one: permission
+        other: permissions
     errors:
       models:
         grant_permission:
