add custom validation to give custom validation error. #848

--- a/config/locales/activerecord/grant_submission_submission_applicant.yml
+++ b/config/locales/activerecord/grant_submission_submission_applicant.yml
@@ -5,4 +5,4 @@ en:
         grant_submission/submission_applicant:
           attributes:
             applicant:
-              taken: 'is already on this submission.'
+              taken: "%{applicant_name} is already on the submission, %{submission_title}."
