refactoring and fix failing specs. #848

--- a/config/locales/activerecord/grant_submission_submission_applicant.yml
+++ b/config/locales/activerecord/grant_submission_submission_applicant.yml
@@ -3,6 +3,8 @@ en:
     errors:
       models:
         grant_submission/submission_applicant:
+          base:
+            remove_last: 'There must be at least one applicant on the submission'
           attributes:
             applicant:
               taken: "%{applicant_name} is already on the submission, %{submission_title}."
