More PR changes. #885

--- a/config/locales/devise.en.yml
+++ b/config/locales/devise.en.yml
@@ -10,7 +10,7 @@ en:
       saml_user:
         invalid: "Log in failed. Please confirm your institutional ID and password."
       registered_user:
-        invalid_idp_domain: '<a href="/users/saml/sign_in">Log in with your Institutional ID.</a>'
+        restricted_idp_domain: '<a href="/users/saml/sign_in">Log in with your Institutional ID.</a>'
         invalid: Incorrect e-mail address or password.
       already_authenticated: "You are already signed in."
       inactive: "Your account is not activated yet."
