--- a/config/locales/activerecord/grant_submission_response.yml
+++ b/config/locales/activerecord/grant_submission_response.yml
@@ -19,6 +19,7 @@ en:
               blank: upload for '%{question} is required.
               content_type_invalid: uploaded for '%{question} must be a PDF, Word or Excel file.
               file_too_large: uploaded for '%{question}' is larger than %{allowed_file_size} (%{uploaded_file_size}MB).
+              excluded_extension_type: uploaded for '%{question}' must be a %{allowed_types} file.
               excluded_mime_type: uploaded for '%{question}' must be a %{allowed_types} file.
               not_a_file_upload: to '%{question}' cannot include a file upload.
             grant_submission_multiple_choice_option_id:
