--- a/config/locales/devise.en.yml
+++ b/config/locales/devise.en.yml
@@ -4,8 +4,8 @@ en:
   devise:
     confirmations:
       confirmed: "Your email address has been successfully confirmed."
-      send_instructions: "You will receive an email with instructions for how to confirm your email address in a few minutes."
-      send_paranoid_instructions: "If your email address exists in our database, you will receive an email with instructions for how to confirm your email address in a few minutes."
+      send_instructions: "You will receive an email with instructions for how to confirm your email address in a few minutes. Email providers treat these confirmations differently so be sure to check your spam folder, especially if you use Gmail."
+      send_paranoid_instructions: "If your email address exists in our database, you will receive an email with instructions for how to confirm your email address in a few minutes. Email providers treat these confirmations differently so be sure to check your spam folder, especially if you use Gmail."
     failure:
       saml_user:
         invalid: "Log in failed. Please confirm your institutional ID and password."
@@ -46,8 +46,8 @@ en:
       signed_up: "Welcome! You have signed up successfully."
       signed_up_but_inactive: "You have signed up successfully. However, we could not sign you in because your account is not yet activated."
       signed_up_but_locked: "You have signed up successfully. However, we could not sign you in because your account is locked."
-      signed_up_but_unconfirmed: "A message with a confirmation link has been sent to your email address. Please follow the link to activate your account."
-      update_needs_confirmation: "You updated your account successfully, but we need to verify your new email address. Please check your email and follow the confirm link to confirm your new email address."
+      signed_up_but_unconfirmed: "A message with a confirmation link has been sent to your email address. Please follow the link to activate your account. Email providers treat these confirmations differently so be sure to check your spam folder, especially if you use Gmail."
+      update_needs_confirmation: "You updated your account successfully, but we need to verify your new email address. Please check your email and follow the confirm link to confirm your new email address. Email providers treat these confirmations differently so be sure to check your spam folder, especially if you use Gmail."
       updated: "Your account has been updated successfully."
       updated_but_not_signed_in: "Your account has been updated successfully, but since your password was changed, you need to sign in again"
     sessions:
