Move On/Off boolean string translations to I18n, add Yes/No translation

--- a/config/locales/activerecord/en.yml
+++ b/config/locales/activerecord/en.yml
@@ -1,4 +1,11 @@
 en:
+  boolean:
+    yes_no:
+      'true': 'Yes'
+      'false': 'No'
+    on_off:
+      'true': 'On'
+      'false': 'Off'
   activerecord:
     errors:
       messages:
