--- a/config/locales/activerecord/review.yml
+++ b/config/locales/activerecord/review.yml
@@ -7,6 +7,10 @@ en:
         overall_impact: Overall Impact
         overall_impact_score: Overall Impact Score
         overall_impact_comment: Overall Impact Comment
+        state:
+          draft: "Draft"
+          submitted: "Completed"
+          assigned: "Assigned"
     errors:
       models:
         review:
