WIP: add helper for review scores to appropriate display scores in index views. Misc formatting, typos, etc.

--- a/config/locales/activerecord/review.yml
+++ b/config/locales/activerecord/review.yml
@@ -9,7 +9,7 @@ en:
         overall_impact_comment: Overall Impact Comment
         state:
           draft: "Draft"
-          submitted: "Completed"
+          submitted: "Submitted"
           assigned: "Assigned"
     errors:
       models:
