WIP: misc formatting, styles

--- a/config/locales/activerecord/review.yml
+++ b/config/locales/activerecord/review.yml
@@ -26,6 +26,7 @@ en:
               may_not_review_own_submission: 'may not review their own submission.'
               is_not_a_reviewer: 'is not a reviewer on this grant.'
               taken: 'has already been assigned this submission.'
+              required: 'is required.'
             submission:
               may_not_be_draft: 'is a draft submission and must be completed before it can be reviewed.'
             criteria_reviews:
