Account for closed review period on Reviewers page

--- a/config/locales/activerecord/en.yml
+++ b/config/locales/activerecord/en.yml
@@ -10,6 +10,7 @@ en:
     formats:
       default: "%m/%d/%Y"
       mmddyyyy: "%m/%d/%Y"
+      readable: "%B %-d, %Y"
   time:
     formats:
       default: "%m/%d/%Y %l:%M%P"
